--- a/404.md
+++ b/404.md
@@ -3,15 +3,49 @@ layout: post
 title: 404 Page
 ---
 
-![](http://static.oschina.net/uploads/img/201311/07073852_OOLu.jpg)
+![404](https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1496072230811&di=252f07c93595781739a2c153dc7f4e67&imgtype=0&src=http%3A%2F%2Fimg05.tooopen.com%2Fproducts%2F20150120%2F96959687.jpg)
 
-You must across something wrong.<br>
-Don't worry. This isn't a problem.<br>
+## Hello.
 
-## When lost in ZenMoore.IO, you can find help through:
+您好，欢迎莅临本站。<br>
+您已经知道了，你要怀着安然、感怀、敬畏之心参观本站。<br>
+下面是说明与指导。
 
-+QQ: 1057398161<br>
-+github: [ZenMoore](Http://github.com/ZenMoore)<br>
-+Sina Weibo: [ZenMoore](http://weibo.com/JavcMak)<br>
+## 说明
 
-## Good luck for you. 
+**Article**: 用于刊登同学们所写文章(包括学术的、抒情的、日记的、娱乐的等)<br>
+**Dream**:   这里是你们理想与理想的大学<br>
+**Filebase**:  用于存储一些文件与共享资源<br>
+**Member**:  我们班的每个成员<br>
+**Past**:   对过去的种种美好的回忆<br>
+**News**:   热点时事、新闻评论、时代分析等<br>
+**Recommand**:  推荐你想推荐的物件、书籍、朋友等<br>
+**Wish**:  在这里你可以匿名或公开的写下你的心愿，说不定有人会帮你。<br>
+`其实,本站远远不止这些。本站是一个团队的第一个项目，这个团队即 573 团队。在 github 上有一个组织团体，名为 Pokecub-573. 希望在未来，我们可以勿忘彼此，各显神通，用自己的能力帮助彼此，在这个茫茫人生之中，共同开创一道美丽的风景。`
+
+## 指导
+
+为了展示我七三班的与众不同<br>
+本站的使用与常规网站不同：<br>
+
+* 使用 markdown 排版
+* 使用 git 进行代码系统托管
+* 使用 github 存储全部文件
+* 拥有 github Organization ID.
+* **..........**
+
+所以，同学们想要发表内容(这说明这位同学有公益心，具备城市生活基本素养)，只需将想发表的内容、文件等交给班长，不过多时就可以看到自己原创的内容。<br>
+当然，如果您的学习欲较强，可以资询班长，学习如何用 markdown 排版，而 git 与 github 是不用了解的(所以不必担心)<br>
+有意向参与网站管理维护的同学，可向班长报名，这样主页 Author 就会有你的名字。
+
+## 可扩展性
+
+本站未来可能会开通以下功能：<br>
+
+* 配套编辑器(前端+后端)
+* 可控的背景音乐
+* 可控的网站配置(字体、颜色等)
+* 爬虫：自动更新 News 栏目
+* SNS 
+* Database
+* 更加高大上的整体风格
