--- a/404.md
+++ b/404.md
@@ -19,7 +19,7 @@ title: 404 Page
 **Member**:  我们班的每个成员<br>
 **Past**:   对过去的种种美好的回忆<br>
 **News**:   热点时事、新闻评论、时代分析等<br>
-**Recommand**:  推荐你想推荐的物件、书籍、朋友等<br>
+**Ads**:  推荐你想推荐的物件、书籍、朋友。音乐等<br>
 **Wish**:  在这里你可以匿名或公开的写下你的心愿，说不定有人会帮你。<br>
 `其实,本站远远不止这些。本站是一个团队的第一个项目，这个团队即 573 团队。在 github 上有一个组织团体，名为 Pokecub-573. 希望在未来，我们可以勿忘彼此，各显神通，用自己的能力帮助彼此，在这个茫茫人生之中，共同开创一道美丽的风景。`
 
@@ -49,3 +49,4 @@ title: 404 Page
 * SNS 
 * Database
 * 更加高大上的整体风格
+* 点赞等激励方式
