--- a/404.md
+++ b/404.md
@@ -34,6 +34,8 @@ title: 404 Page
 * 拥有 github Organization ID.
 * **..........**
 
+**对于优秀的或受广泛热评的内容，我们会置顶你的文章，同时会在QQ群给予一个专用强势头衔或黄钻奖励(班长出资)**<br>
+**我们还会搞一些线下活动，或者对你们进行内容推送，届时希望同学们积极参与。**<br>
 所以，同学们想要发表内容(这说明这位同学有公益心，具备城市生活基本素养)，只需将想发表的内容、文件等交给班长，不过多时就可以看到自己原创的内容。<br>
 当然，如果您的学习欲较强，可以资询班长，学习如何用 markdown 排版，而 git 与 github 是不用了解的(所以不必担心)<br>
 有意向参与网站管理维护的同学，可向班长报名，这样主页 Author 就会有你的名字。
